fix: Board overflow-x -> hidden

--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -125,6 +125,7 @@ body {
     position: relative;
     overflow: auto;
     padding-bottom: 300px;
+    overflow-x: hidden;
 }
 
 #ThemeSwitcher {
